# aiagent-enterprise-practice

./: .gitignore  README.md  __init__.py  aiagent-enterprise-practise.code-workspace  init_generator.py  setup.py  test_import.py  workflow.mmd
agent/: space_tools.py.bak0  test_flight_assistant.py
agent/flight/: flight_assistant_v0.py
agent/space/: TEST.md  agent_tool.py  api.py  space_agent.py  (+5 more)
app/: test_flight_assistant.py
config/: application.yml
ctrip-assistant-mcp/: main.py  mcp_server.py  mcp_test.py  pyproject.toml
ctrip-assistant-supervisor/: pyproject.toml
ctrip-assistant-supervisor/api/graph_api/: graph_views.py
ctrip-assistant-supervisor/api/user_api/: user_schemas.py
ctrip-assistant-supervisor/app/dao/: base_repository.py  session.py
ctrip-assistant-supervisor/app/dao/models/: booking_models.py  car_rental_models.py  hotel_models.py
ctrip-assistant-supervisor/app/multi_agent/: llm.py
ctrip-assistant-supervisor/app/multi_agent/graph_chat/: base.py  state.py  sub_agents.py  supervisor.py  task_handoff.py  workflow.py
ctrip-assistant-supervisor/app/multi_agent/tools/: base.py  flight_tools.py  hotel_tools.py  trip_recommendation_tools.py  user_info.py
ctrip-assistant-supervisor/utils/: jwt_utils.py
ctrip-assistant-supervisor/web/: chat_test.py
frontend/: agent-comm.js  index.html  main.js  ws.js
infrastructure/: config.py  logger.py
repository/: flights_repository.py  hotels_repository.py  sqllite_checkpointer.py  trip_repository.py
service/: flight_service.py  hotel_service.py  trip_service.py
utils/: langgraph_utils.py
(+90 files in other folders)
